test/functions/bradc/forgotReturn.good
forgotReturn.chpl:5: error: illegal use of function that does not return a value: 'foo'
